src/components/pages/analytics/analytics.css
.react-calendar-heatmap .color-empty {
    /*noinspection CssUnresolvedCustomProperty*/
    fill: var(--surface-container-high) !important
}

.react-calendar-heatmap .color-scale-1 {
    /*noinspection CssUnresolvedCustomProperty*/
    fill: var(--primary);
    opacity: .4
}

.react-calendar-heatmap .color-scale-2 {
    /*noinspection CssUnresolvedCustomProperty*/
    fill: var(--primary);
    opacity: .7
}

.react-calendar-heatmap .color-scale-3 {
    /*noinspection CssUnresolvedCustomProperty*/
    fill: var(--primary);
    opacity: 1
}

.react-calendar-heatmap-weekday-labels {
    transform: translate(6px, 14px);
}

